--- a/scss/main.scss
+++ b/scss/main.scss
@@ -104,11 +104,11 @@ ul{
         height: $radius;
         display: flex;
         
-        justify-content: space-around;
+        justify-content: center;
         border-radius: 50%;
         background-image: $G-cricle;
         flex-direction: column;
-        div{
+        #add{
             
             font-size: 3rem;
         }
@@ -119,7 +119,7 @@ ul{
     }
 }
 @media screen and (max-width:992px) {
-    
+    $radius:36.8%;
     .raw{
         
         height: auto;
