--- a/scss/_varible.scss
+++ b/scss/_varible.scss
@@ -13,4 +13,4 @@ $Light-redf: hsl(0, 100%, 67%);
 $Orangey-yellowf: hsl(39, 100%, 56%);
 $Green-tealf: hsl(166, 100%, 37%);
 $Cobalt-bluef: hsl(234, 85%, 45%);
-$radius:7.16rem
+$radius:7.16rem;
