--- a/scss/main.scss
+++ b/scss/main.scss
@@ -55,8 +55,8 @@ ul{
     li{
         padding: 16px;
         margin: 0.83rem;
-        border-radius: 0.83rem;
-        box-shadow:1px 1px 1px 1px $N-Light-lavender;
+        border-radius: 15px;
+        
     }
 }
 .Li1{
