--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,7 +50,7 @@ body{
 }
 ul{
     list-style-type: none;
-    padding-left: 10px ;
+    padding-left: 0 ;
     list-style-position: inside;
     li{
         padding: 16px;
@@ -109,7 +109,10 @@ ul{
     background-color: hsl(0, 0%, 100%);
     
     border-radius: 0 1rem 1rem 0;
-    padding: 0;
+    padding: 1rem;
+    h4{
+        padding-left: 15px;
+    }
 }
 #Result{
     color: $N-Pale-blue;
